--- a/task_app/app/views/authors/show.html.erb
+++ b/task_app/app/views/authors/show.html.erb
@@ -5,7 +5,7 @@
 	<title>Authors Show</title>
 </head>
 <body>
-	<div> Name: <%= @author.name %> </div>
+	<div> Email: <%= @author.email %> </div>
 	
 </body>
 </html>
